# remote_tablet

./: Cargo.toml  readme.md
html/: index.html
src/: main.rs
