[package]
name = "remote_tablet"
version = "0.1.0"
authors = ["Arjo <arjo129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
qrcode = "0.12.0"
image = "0.23.4"
ifaces = "0.1.0"
gdk-pixbuf = ""

[dependencies.gtk]
version = ""
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
